# SYA-MINI

./: .gitignore  .gitmodules  LICENSE-MIT  README.md  SyArm_Mini.asm  SyArm_Mini.cfg  a_sya_mini.asm  a_sya_mini.cfg  a_sya_mini.dft  sya_mini.asm  sya_mini.cfg
Drafts/: SyArm_Mini.dft
code/: Cargo.toml
code/src/: main.rs  sya_mini.rs
construction/: 1_segment_bearing_cap.par  2_segment_bearing_cap_upper.par  3_stepper_cable_lead.par  4_meas_trigger.par
construction/Base_Mk1/: Base.par  Base_Mk1.asm  Base_Mk1.cfg  BearingCap .par  BearingRing.par  Shaft.par
construction/IntegratedArm/: IntegratedArm.asm  IntegratedArm.cfg
construction/SimpleTongs_Mk3/: SimpleTongs_Mk3.asm  SimpleTongs_Mk3.cfg
construction/a1_segment/: 1_2_3_4_5_mb_segment.par  1_2_3_4_mb_segment.par  1_stepper_connector.par  2_arc_body.par  3_diag_connector.par  4_bearing_connector.par  5_cable_lead.par  a1_segment.asm  a1_segment.cfg
construction/a2_base/: 1_body.par  2_baseplate.par  3_4_mb_connector.par  3_main_connector.par  4_side_connector.par  5_bearing_cap.par  6_connector.par  a2_base.asm  a2_base.cfg
construction/a3_tool_flange/: 1_2_mb_parts.par  1_connector.par  2_flange.par  a3_tool_flange.asm  a3_tool_flange.cfg  a3_tool_flange.dft
construction/c1_planet_gear_i9_nema17/: 1_stepper_gear.asm  1_stepper_gear.cfg  3_case.asm  3_case.cfg  4_carrier.asm  4_carrier.cfg  5_outter_carrier.par  README.md  c1_planet_gear_i9_nema17.asm  c1_planet_gear_i9_nema17.cfg  planet_gear_i9_nema17.dft
construction/c2_planet_gear_i9_nema23/: 1_stepper_gear.asm  1_stepper_gear.cfg  3_case.asm  (+7 more)
(+106 files in other folders)
