[package]
name = "sya_sys"
authors = [ "Samuel Nösslböck <samuel.noesslboeck@gmail.com>" ]
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = { version = "0.10.1" }
glam = "0.24.2"
log = "0.4.20"

syact = { path = "../../../libs/syact" }
sybot = { path = "../../../libs/sybot" }

[features]
rasp = [ "syact/rasp", "sybot/rasp" ]
